<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_coleccion"
            android:icon="@drawable/ic_collections"
            android:title="@string/menu_coleccion" />

        <item
            android:id="@+id/nav_libros"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_libros" />

        <item
            android:id="@+id/nav_deseados"
            android:icon="@drawable/ic_collections"
            android:title="@string/menu_deseados" />

        <item
            android:id="@+id/nav_coleccionlibro"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_coleccionlibro" />


        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_autor"
            android:title="@string/menu_usuarios" />
        <item
            android:id="@+id/nav_autores"
            android:icon="@drawable/ic_autor"
            android:title="@string/menu_autores" />

        <item
            android:id="@+id/nav_inventarios"
            android:icon="@drawable/ic_inventario"
            android:title="@string/menu_inventario" />

        <item
            android:id="@+id/nav_compras"
            android:icon="@drawable/ic_buy"
            android:title="@string/menu_compra" />

        <item
            android:id="@+id/nav_prestamos"
            android:icon="@drawable/ic_autor"
            android:title="@string/menu_prestamo" />
    </group>
</menu>