<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_autores"
        android:name="com.sv.proye.tecaapp.views.ui.autores.AutoresFragment"
        android:label="@string/menu_autores"
        tools:layout="@layout/autores_fragment" />

    <fragment
        android:id="@+id/nav_coleccion"
        android:name="com.sv.proye.tecaapp.views.ui.colecciones.ColeccionFragment"
        android:label="@string/menu_coleccion"
        tools:layout="@layout/coleccion_fragment" />

    <fragment
        android:id="@+id/nav_libros"
        android:name="com.sv.proye.tecaapp.views.ui.libros.LibrosFragment"
        android:label="@string/menu_libros"
        tools:layout="@layout/libros_fragment" />

    <fragment
        android:id="@+id/nav_deseados"
        android:name="com.sv.proye.tecaapp.views.ui.libros.LibroDeseadoFragment"
        android:label="@string/menu_deseados"
        tools:layout="@layout/libro_deseado_fragment" />

    <fragment
        android:id="@+id/nav_coleccionlibro"
        android:name="com.sv.proye.tecaapp.views.ui.colecciones.ColeccionLibroFragment"
        android:label="@string/menu_coleccionlibro"
        tools:layout="@layout/coleccion_libro_fragment" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sv.proye.tecaapp.views.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_usuarios"
        android:name="com.sv.proye.tecaapp.views.ui.usuarios.UsuariosFragment"
        android:label="@string/menu_usuarios"
        tools:layout="@layout/usuarios_fragment" />

    <fragment
        android:id="@+id/nav_inventarios"
        android:name="com.sv.proye.tecaapp.views.ui.inventario.InventarioFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/inventario_fragment" />

    <fragment
        android:id="@+id/nav_compras"
        android:name="com.sv.proye.tecaapp.views.ui.inventario.ComprasFragment"
        android:label="@string/menu_compra"
        tools:layout="@layout/compras_fragment" />

    <fragment
        android:id="@+id/nav_prestamos"
        android:name="com.sv.proye.tecaapp.views.ui.inventario.PrestamosFragment"
        android:label="@string/menu_prestamo"
        tools:layout="@layout/prestamos_fragment" />

</navigation>