<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ui.autores.AutoresFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="@dimen/medium_image_margin"
                android:layout_height="@dimen/medium_image_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/asd"
                android:scaleType="centerCrop"
                android:src="@drawable/book_tree"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:background="@color/black"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding_button"
                android:paddingVertical="@dimen/padding_small"
                android:text="@string/register_autor"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView1" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/medium_image_margin"
                android:layout_marginVertical="@dimen/padding_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:labelFor="@id/autor_name"
                        android:text="@string/name" />

                    <EditText
                        android:id="@+id/autor_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:autofillHints="name"
                        android:digits="@string/textName"
                        android:inputType="text"
                        android:maxLength="100" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:gravity="center"
                        android:labelFor="@id/autor_lastname"
                        android:text="@string/last_name" />

                    <EditText
                        android:id="@+id/autor_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:autofillHints="name"
                        android:digits="@string/textName"
                        android:inputType="text" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:gravity="center"
                        android:labelFor="@id/autor_fechanacimiento"
                        android:text="@string/born_date" />

                    <DatePicker
                        android:id="@+id/autor_fechanacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:gravity="center"
                        android:labelFor="@id/autor_fallecido"
                        android:text="@string/defeated_ask" />

                    <ToggleButton
                        android:id="@+id/autor_fallecido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textOff="@string/not"
                        android:textOn="@string/yes" />

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:gravity="center"
                        android:labelFor="@id/autor_fechadefuncion"
                        android:text="@string/defeat_date" />

                    <DatePicker
                        android:id="@+id/autor_fechadefuncion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/autor_savebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_button"
                        android:gravity="center"
                        android:text="@string/save" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>